--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -1,3 +1,6 @@
 @import './_font.scss';
 @import './mixin.scss';
 @import './variables.scss';
+@import './animation.scss';
+@import './custom.scss';
+@import './themes/veloera-modern.scss';
