--- a/web/src/styles/custom.scss
+++ b/web/src/styles/custom.scss
@@ -608,12 +608,12 @@ body {
   
   .semi-table-tbody {
     .semi-table-row {
-      background: rgba(255, 255, 255, 0.9) !important;
+      background: rgba(255, 255, 255, 0.9) !important; 
       transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) !important;
       
-      &:nth-child(even) {
-        background: rgba(255, 245, 250, 0.9) !important;
-      }
+     /* &:nth-child(even) {
+          background: rgba(255, 245, 250, 0.9) !important;
+      }*/
       
       &:hover {
         background: linear-gradient(90deg, 
