--- a/web/src/styles/custom.scss
+++ b/web/src/styles/custom.scss
@@ -775,7 +775,7 @@ body {
   
   .semi-navigation-item {
     border-radius: 20px !important;
-    margin: 6px 12px !important;
+    // margin: 6px 12px !important;
     transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55) !important;
     position: relative !important;
     overflow: hidden !important;
